--- a/BasicBackground/BasicBackground.theme.css
+++ b/BasicBackground/BasicBackground.theme.css
@@ -44,7 +44,7 @@
 
 /* To change stuff like the colors, transparency and background image, change the variables inside the root {}, do NOT change the @import url() */
 
-@import url(https://mwittrien.github.io/BetterDiscordAddons/Themes/BasicBackground/BasicBackground.css);
+@import url(https://github.com/EnderKnightYT/mydiscordbackgrounds/blob/main/BasicBackground/BasicBackground.css);
 
 :root {
 	--transparencycolor:		0, 0, 0;			/* default: 0, 0, 0															*/
@@ -83,4 +83,5 @@
 	--textdarkest: 			90, 90, 90;			/* default: 90, 90, 90				(text color for the darkest texts)							*/
 	
 	--version1_0_5:			none;				/* DO NOT CHANGE THIS VARIABLE , USED TO HIDE UPDATE NOTICE										*/
+
 }
